Corrected directory references

--- a/assignment4/index.html
+++ b/assignment4/index.html
@@ -7,16 +7,16 @@
     <!-- <script src="lib/angular-ui-router.min.js"></script> -->
 <script src="lib/angular-ui-router0.3.2.js"></script>
     <!-- Modules -->
-    <script src="src/categories/menuapp.module.js"></script>
+    <script src="src/MenuApp/menuapp.module.js"></script>
 
     <!-- Routes -->
     <script src="src/routes.js"></script>
 
     <!-- 'ShoppingList' module artifacts -->
-    <script src="src/categories/categories.component.js"></script>
-    <script src="src/categories/itemList.component.js"></script>
-    <script src="src/categories/menudata.controller.js"></script>
-    <script src="src/categories/menudata.service.js"></script>
-    <script src="src/categories/itemList.controller.js"></script>
+    <script src="src/MenuApp/categories.component.js"></script>
+    <script src="src/MenuApp/itemList.component.js"></script>
+    <script src="src/MenuApp/menudata.controller.js"></script>
+    <script src="src/MenuApp/menudata.service.js"></script>
+    <script src="src/MenuApp/itemList.controller.js"></script>
   </body>
 </html>
